--- a/prjShotMaster/frmMain.ru.resx
+++ b/prjShotMaster/frmMain.ru.resx
@@ -117,15 +117,51 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="cbPlaySoundDefault.Size" type="System.Drawing.Size, System.Drawing">
+    <value>107, 21</value>
+  </data>
+  <data name="cbPlaySoundDefault.Text" xml:space="preserve">
+    <value>Играть звук</value>
+  </data>
+  <data name="lblTimerIntervalDefault1.Text" xml:space="preserve">
+    <value>с</value>
+  </data>
+  <data name="lblTimerIntervalDefault.Size" type="System.Drawing.Size, System.Drawing">
+    <value>72, 17</value>
+  </data>
+  <data name="lblTimerIntervalDefault.Text" xml:space="preserve">
+    <value>Интервал</value>
+  </data>
+  <data name="lblFileFormatDefault.Size" type="System.Drawing.Size, System.Drawing">
+    <value>108, 17</value>
+  </data>
+  <data name="lblFileFormatDefault.Text" xml:space="preserve">
+    <value>Формат файла</value>
+  </data>
+  <data name="lblJpegQualityDefault.Size" type="System.Drawing.Size, System.Drawing">
+    <value>101, 17</value>
+  </data>
+  <data name="lblJpegQualityDefault.Text" xml:space="preserve">
+    <value>Качество jpeg</value>
+  </data>
+  <data name="lblSoundLocationDefault.Size" type="System.Drawing.Size, System.Drawing">
+    <value>108, 17</value>
+  </data>
+  <data name="lblSoundLocationDefault.Text" xml:space="preserve">
+    <value>Звуковой файл</value>
+  </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="lblDestinationFolderDefault.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="lblDestinationFolderDefault.Size" type="System.Drawing.Size, System.Drawing">
     <value>111, 17</value>
   </data>
   <data name="lblDestinationFolderDefault.Text" xml:space="preserve">
     <value>Куда сохранять</value>
+  </data>
+  <data name="btnApplyDefault.Text" xml:space="preserve">
+    <value>Применить</value>
   </data>
 </root>
