--- a/prjShotMaster/Forms/frmMain.resx
+++ b/prjShotMaster/Forms/frmMain.resx
@@ -999,14 +999,8 @@
   <metadata name="cmsNotify.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>357, 21</value>
   </metadata>
-  <data name="closeToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 24</value>
-  </data>
-  <data name="closeToolStripMenuItem.Text" xml:space="preserve">
-    <value>Close</value>
-  </data>
   <data name="cmsNotify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 50</value>
+    <value>103, 28</value>
   </data>
   <data name="&gt;&gt;cmsNotify.Name" xml:space="preserve">
     <value>cmsNotify</value>
@@ -1021,7 +1015,7 @@
     <value>0, 0</value>
   </data>
   <data name="msMainMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>807, 28</value>
+    <value>542, 28</value>
   </data>
   <data name="msMainMenu.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -7231,6 +7225,12 @@
   <data name="ntfIcn.Visible" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="closeToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>102, 24</value>
+  </data>
+  <data name="closeToolStripMenuItem.Text" xml:space="preserve">
+    <value>Exit</value>
+  </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -7238,7 +7238,7 @@
     <value>8, 16</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>807, 492</value>
+    <value>542, 492</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -13411,6 +13411,9 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
 </value>
+  </data>
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Settings</value>
