--- a/prjShotMaster/Forms/frmMain.resx
+++ b/prjShotMaster/Forms/frmMain.resx
@@ -117,8 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="&gt;&gt;helpToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btntbDestinationFolderDefault.Size" type="System.Drawing.Size, System.Drawing">
+    <value>23, 23</value>
+  </data>
+  <data name="gitHubToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 24</value>
+  </data>
   <data name="tsmiFile.Text" xml:space="preserve">
     <value>&amp;File</value>
+  </data>
+  <data name="&gt;&gt;lblTimerIntervalDefault1.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <data name="&gt;&gt;ntfIcn.Name" xml:space="preserve">
     <value>ntfIcn</value>
@@ -133,7 +146,6 @@
   <data name="&gt;&gt;btnApplyDefault.Name" xml:space="preserve">
     <value>btnApplyDefault</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="tbTimerIntervalDefault.Size" type="System.Drawing.Size, System.Drawing">
     <value>57, 22</value>
   </data>
@@ -193,6 +205,9 @@
   </data>
   <data name="pnlPlaySoundDefault.TabIndex" type="System.Int32, mscorlib">
     <value>14</value>
+  </data>
+  <data name="tsmiFile.Size" type="System.Drawing.Size, System.Drawing">
+    <value>44, 24</value>
   </data>
   <data name="lblDestinationFolderDefault.Text" xml:space="preserve">
     <value>Destination folder</value>
@@ -12562,8 +12577,8 @@
   <data name="&gt;&gt;od.Name" xml:space="preserve">
     <value>od</value>
   </data>
-  <data name="&gt;&gt;tbTimerIntervalDefault.Name" xml:space="preserve">
-    <value>tbTimerIntervalDefault</value>
+  <data name="helpToolStripMenuItem.Text" xml:space="preserve">
+    <value>Help</value>
   </data>
   <data name="&gt;&gt;btnApplyDefault.Type" xml:space="preserve">
     <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -12577,20 +12592,23 @@
   <data name="&gt;&gt;msMainMenu.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
+  <data name="&gt;&gt;gitHubToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;tbDestinationFolderDefault.Name" xml:space="preserve">
+    <value>tbDestinationFolderDefault</value>
+  </data>
   <data name="&gt;&gt;pnlPlaySoundDefault.Name" xml:space="preserve">
     <value>pnlPlaySoundDefault</value>
   </data>
   <data name="btntbDestinationFolderDefault.Location" type="System.Drawing.Point, System.Drawing">
     <value>498, 5</value>
   </data>
-  <data name="msMainMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>542, 28</value>
+  <data name="&gt;&gt;pnlSettingsDefault.ZOrder" xml:space="preserve">
+    <value>2</value>
   </data>
   <data name="lblTimerIntervalDefault1.Location" type="System.Drawing.Point, System.Drawing">
     <value>225, 8</value>
-  </data>
-  <data name="&gt;&gt;pnlSettingsDefault.ZOrder" xml:space="preserve">
-    <value>2</value>
   </data>
   <data name="cbPlaySoundDefault.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 21</value>
@@ -12616,8 +12634,8 @@
   <data name="&gt;&gt;cbPlaySoundDefault.Name" xml:space="preserve">
     <value>cbPlaySoundDefault</value>
   </data>
-  <data name="cmsNotify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>103, 28</value>
+  <data name="&gt;&gt;btntbDestinationFolderDefault.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <data name="&gt;&gt;pnlDestinationFolderDefault.ZOrder" xml:space="preserve">
     <value>2</value>
@@ -12638,7 +12656,7 @@
     <value>$this</value>
   </data>
   <data name="ntfIcn.Text" xml:space="preserve">
-    <value>Double click to shoe Settings form</value>
+    <value>Double click to show Settings form</value>
   </data>
   <data name="&gt;&gt;openDestinationFolderToolStripMenuItem.Name" xml:space="preserve">
     <value>openDestinationFolderToolStripMenuItem</value>
@@ -12651,6 +12669,9 @@
   </data>
   <data name="&gt;&gt;lblDestinationFolderDefault.ZOrder" xml:space="preserve">
     <value>1</value>
+  </data>
+  <data name="&gt;&gt;helpToolStripMenuItem.Name" xml:space="preserve">
+    <value>helpToolStripMenuItem</value>
   </data>
   <data name="pnlPlaySoundDefault.Location" type="System.Drawing.Point, System.Drawing">
     <value>3, 81</value>
@@ -12683,8 +12704,14 @@
   <data name="&gt;&gt;pnlDestinationFolderDefault.Type" xml:space="preserve">
     <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;gitHubToolStripMenuItem.Name" xml:space="preserve">
+    <value>gitHubToolStripMenuItem</value>
+  </data>
   <data name="pnlSettingsDefault.Location" type="System.Drawing.Point, System.Drawing">
     <value>3, 31</value>
+  </data>
+  <data name="&gt;&gt;cmsNotify.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ContextMenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="btnApplyDefault.Text" xml:space="preserve">
     <value>&amp;Apply</value>
@@ -12716,8 +12743,8 @@
   <data name="&gt;&gt;lblTimerIntervalDefault1.Name" xml:space="preserve">
     <value>lblTimerIntervalDefault1</value>
   </data>
-  <data name="&gt;&gt;msMainMenu.Name" xml:space="preserve">
-    <value>msMainMenu</value>
+  <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>53, 24</value>
   </data>
   <data name="&gt;&gt;pnlTimerIntervalDefault.Type" xml:space="preserve">
     <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -12740,11 +12767,11 @@
   <data name="&gt;&gt;lblDestinationFolderDefault.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;cmsNotify.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ContextMenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="aboutToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 24</value>
   </data>
-  <data name="btntbDestinationFolderDefault.Size" type="System.Drawing.Size, System.Drawing">
-    <value>23, 23</value>
+  <data name="cmsNotify.Size" type="System.Drawing.Size, System.Drawing">
+    <value>103, 28</value>
   </data>
   <data name="&gt;&gt;shotNowToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -12788,8 +12815,8 @@
   <data name="openDestinationFolderToolStripMenuItem.Text" xml:space="preserve">
     <value>Open destination folder</value>
   </data>
-  <data name="cbPlaySoundDefault.Location" type="System.Drawing.Point, System.Drawing">
-    <value>6, 6</value>
+  <data name="&gt;&gt;aboutToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="msMainMenu.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
@@ -12797,23 +12824,29 @@
   <data name="&gt;&gt;btntbDestinationFolderDefault.Type" xml:space="preserve">
     <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;tbTimerIntervalDefault.Name" xml:space="preserve">
+    <value>tbTimerIntervalDefault</value>
+  </data>
   <data name="btntbDestinationFolderDefault.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
   </data>
   <data name="&gt;&gt;cbPlaySoundDefault.Type" xml:space="preserve">
     <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;openDestinationFolderToolStripMenuItem.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="pnlDestinationFolderDefault.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
+  </data>
+  <data name="&gt;&gt;aboutToolStripMenuItem.Name" xml:space="preserve">
+    <value>aboutToolStripMenuItem</value>
   </data>
   <data name="&gt;&gt;tbDestinationFolderDefault.Type" xml:space="preserve">
     <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;lblTimerIntervalDefault1.ZOrder" xml:space="preserve">
-    <value>0</value>
+  <data name="gitHubToolStripMenuItem.Text" xml:space="preserve">
+    <value>GitHub</value>
+  </data>
+  <data name="msMainMenu.Size" type="System.Drawing.Size, System.Drawing">
+    <value>542, 28</value>
   </data>
   <data name="&gt;&gt;pauseToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -12851,8 +12884,8 @@
   <data name="lblTimerIntervalDefault.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
   </data>
-  <data name="&gt;&gt;tbDestinationFolderDefault.Name" xml:space="preserve">
-    <value>tbDestinationFolderDefault</value>
+  <data name="cbPlaySoundDefault.Location" type="System.Drawing.Point, System.Drawing">
+    <value>6, 6</value>
   </data>
   <data name="&gt;&gt;pnlSettingsDefault.Name" xml:space="preserve">
     <value>pnlSettingsDefault</value>
@@ -12863,11 +12896,11 @@
   <data name="exitToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>236, 24</value>
   </data>
-  <data name="tsmiFile.Size" type="System.Drawing.Size, System.Drawing">
-    <value>44, 24</value>
+  <data name="&gt;&gt;msMainMenu.Name" xml:space="preserve">
+    <value>msMainMenu</value>
   </data>
-  <data name="msMainMenu.Text" xml:space="preserve">
-    <value>menuStrip1</value>
+  <data name="&gt;&gt;openDestinationFolderToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="cbPlaySoundDefault.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -12893,8 +12926,11 @@
   <data name="pnlTimerIntervalDefault.Location" type="System.Drawing.Point, System.Drawing">
     <value>3, 43</value>
   </data>
-  <data name="&gt;&gt;btntbDestinationFolderDefault.ZOrder" xml:space="preserve">
-    <value>0</value>
+  <data name="msMainMenu.Text" xml:space="preserve">
+    <value>menuStrip1</value>
+  </data>
+  <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
+    <value>About…</value>
   </data>
   <metadata name="cmsNotify.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>357, 21</value>
