--- a/prjShotMaster/Forms/frmMain.resx
+++ b/prjShotMaster/Forms/frmMain.resx
@@ -180,6 +180,27 @@
   <data name="pnlTimerIntervalDefault.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
   </data>
+  <data name="nudTimerIntervalDefault.Location" type="System.Drawing.Point, System.Drawing">
+    <value>162, 6</value>
+  </data>
+  <data name="nudTimerIntervalDefault.Size" type="System.Drawing.Size, System.Drawing">
+    <value>57, 22</value>
+  </data>
+  <data name="nudTimerIntervalDefault.TabIndex" type="System.Int32, mscorlib">
+    <value>2</value>
+  </data>
+  <data name="&gt;&gt;nudTimerIntervalDefault.Name" xml:space="preserve">
+    <value>nudTimerIntervalDefault</value>
+  </data>
+  <data name="&gt;&gt;nudTimerIntervalDefault.Type" xml:space="preserve">
+    <value>System.Windows.Forms.NumericUpDown, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;nudTimerIntervalDefault.Parent" xml:space="preserve">
+    <value>pnlTimerIntervalDefault</value>
+  </data>
+  <data name="&gt;&gt;nudTimerIntervalDefault.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
   <data name="lblTimerIntervalDefault1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -208,7 +229,7 @@
     <value>pnlTimerIntervalDefault</value>
   </data>
   <data name="&gt;&gt;lblTimerIntervalDefault1.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>1</value>
   </data>
   <data name="lblTimerIntervalDefault.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -238,27 +259,6 @@
     <value>pnlTimerIntervalDefault</value>
   </data>
   <data name="&gt;&gt;lblTimerIntervalDefault.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="tbTimerIntervalDefault.Location" type="System.Drawing.Point, System.Drawing">
-    <value>162, 5</value>
-  </data>
-  <data name="tbTimerIntervalDefault.Size" type="System.Drawing.Size, System.Drawing">
-    <value>57, 22</value>
-  </data>
-  <data name="tbTimerIntervalDefault.TabIndex" type="System.Int32, mscorlib">
-    <value>2</value>
-  </data>
-  <data name="&gt;&gt;tbTimerIntervalDefault.Name" xml:space="preserve">
-    <value>tbTimerIntervalDefault</value>
-  </data>
-  <data name="&gt;&gt;tbTimerIntervalDefault.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;tbTimerIntervalDefault.Parent" xml:space="preserve">
-    <value>pnlTimerIntervalDefault</value>
-  </data>
-  <data name="&gt;&gt;tbTimerIntervalDefault.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
   <data name="pnlTimerIntervalDefault.Location" type="System.Drawing.Point, System.Drawing">
@@ -508,13 +508,13 @@
     <value>Segoe UI, 9pt, style=Underline</value>
   </data>
   <data name="gitHubToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 24</value>
+    <value>130, 24</value>
   </data>
   <data name="gitHubToolStripMenuItem.Text" xml:space="preserve">
     <value>GitHub</value>
   </data>
   <data name="aboutToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 24</value>
+    <value>130, 24</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
     <value>About…</value>
@@ -12998,9 +12998,6 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
 </value>
   </data>
-  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
   <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
     <value>CenterScreen</value>
   </data>
@@ -13061,6 +13058,12 @@
   <data name="&gt;&gt;helpToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;gitHubToolStripMenuItem.Name" xml:space="preserve">
+    <value>gitHubToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;gitHubToolStripMenuItem.Type" xml:space="preserve">
+    <value>prjShotMaster.Components.CToolStripMenuItemLink, prjShotMaster, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
   <data name="&gt;&gt;aboutToolStripMenuItem.Name" xml:space="preserve">
     <value>aboutToolStripMenuItem</value>
   </data>
@@ -13114,12 +13117,6 @@
   </data>
   <data name="&gt;&gt;toolStripSeparator1.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripSeparator, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;gitHubToolStripMenuItem.Name" xml:space="preserve">
-    <value>gitHubToolStripMenuItem</value>
-  </data>
-  <data name="&gt;&gt;gitHubToolStripMenuItem.Type" xml:space="preserve">
-    <value>prjShotMaster.Components.CToolStripMenuItemLink, prjShotMaster, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>frmMain</value>
